[tool.poetry]
name = "easywall"
version = "0.0.3"
description = "Powerful Firewall Core and Easy to use Webinterface for IPTables Firewall"
authors = ["Jochen Pylypiw <jochen@pylypiw.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.5"
Flask = "^1.1"
watchdog = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
