# for a list of all values see
# https://setuptools.readthedocs.io/en/latest/setuptools.html

[metadata]
name = easywall
version = 0.0.4
url = https://github.com/jpylypiw/easywall
project_urls =
    Bug Tracker = https://github.com/jpylypiw/easywall/issues
    Documentation = https://github.com/jpylypiw/easywall/blob/master/README.md
    Source Code = https://github.com/jpylypiw/easywall
author = Jochen Pylypiw
author_email = jochen@pylypiw.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Networking :: Firewalls
license = GPL-3.0
description = Module for easy control of Unix firewalls by using configuration files
long_description = file: README.md
long_description_content_type = text/markdown
keywords = firewall, iptables, linux, framework, easywall

[options]
zip_safe = false
setup_requires =
    setuptools
    pytest-runner
python_requires = >= 3.5
tests_require =
    pytest-cov
    pytest-flake8
    pytest
include_package_data = true
packages = find:
install_requires =
    watchdog

[flake8]
max-line-length = 100
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/
