# for a list of all values see
# https://setuptools.readthedocs.io/en/latest/setuptools.html

[metadata]
name = easywall
version = 0.3.1
url = https://github.com/jpylypiw/easywall
project_urls =
    Bug Tracker = https://github.com/jpylypiw/easywall/issues
    Documentation = https://github.com/jpylypiw/easywall/blob/master/README.md
    Source Code = https://github.com/jpylypiw/easywall
author = Jochen Pylypiw
author_email = 12394156+jpylypiw@users.noreply.github.com
classifiers =
    Framework :: Flask
    Topic :: System :: Networking :: Firewalls
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Unix Shell
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Natural Language :: English
license = GPL-3.0
description = Web interface for easy use of the IPTables firewall on Linux systems written in Python3
long_description = file: README.md
long_description_content_type = text/markdown
keywords = firewall, iptables, linux, framework, easywall

[options]
zip_safe = false
setup_requires =
    setuptools
    pytest-runner
python_requires = >= 3.6
tests_require =
    pytest-cov
    pytest-flake8
    pytest-mypy
    pytest
include_package_data = true
packages = find:
install_requires =
    watchdog
    Flask
    natsort
    flask-ipban
    pyyaml

[flake8]
max-line-length = 100
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
files = easywall
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
strict_equality = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
disallow_any_unimported = False
disallow_any_expr = False
disallow_any_decorated = False
disallow_any_explicit = False
disallow_any_generics = False
disallow_subclassing_any = False
